deployments/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hookap
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hookap
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: hookap
    spec:
      containers:
        - name: hookap
          image: harbor2.kfsyscc.org/api/hookap:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
      imagePullSecrets:
        - name: regsecret
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Taipei
