deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hookap-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      rewrite ^/iphe--dashboard(.*)$ /$1 redirect;
spec:
  rules:
    - host: ing2.kfsyscc.org
      http:
        paths:
        - path: /hookap(/|$)(.*)
          backend:
            serviceName: hookap-svc
            servicePort: 80
